# eulerswap-hook

./: .env.example  .gitignore  .gitmodules  .tool-versions  AGENTS.md  ARCHITECTURE.md  Makefile  PROMPTS.md  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
agent/: .env.example  .gitignore  README.md  REBALANCING_STRATEGY.md  fork-test.sh  package.json  sim-harness.sh
contracts/: foundry.toml
docs/: additive-boost-derivation.md  addresses.md  auction-walkthrough.md  blog-post.md  build-your-own-active-lp.md  build-your-own-propamm.md  builder-fee-design.md  calibration-guide.md  case-study-usdc-usdt.md  debt-management.md  displacement-mechanism.md  dynamic-fee-model.md  faq.md  hookv2-deployment.md  hookv3-audit.md  parameter-strategy-guide.md  per-lp-architecture.md  rebalance-auction-design.md  rebalance.md  recenter-pool.md  security-audit-2026-06-followup.md  security-audit-2026-06.md  uniswap-fee-compass.md  uniswap-oracle-pattern.md  usdc-usdt-pool-analysis.md  usdc-usdt-v7-params.md  yield-basis-analysis.md  yield-basis-comparison.md
integrations/cow-protocol/rust/: Cargo.toml  README.md
integrations/cow-protocol/rust/crates/euler-swap/: Cargo.toml
integrations/cow-protocol/rust/crates/euler-swap-tests/: Cargo.toml
integrations/cow-protocol/rust/crates/euler-swap-tests/tests/: discovery.rs  helpers.rs  quoting.rs  settlement.rs
integrations/cow-protocol/rust/crates/euler-swap/src/: abi.rs  lib.rs  pool_fetching.rs  quoting.rs  settlement.rs  types.rs
scripts/: README.md  analyze-hook.ts  analyze-v7.ts  diag-recenter.ts  (+17 more)
(+218 files in other folders)
